--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,11 +33,11 @@
         <p>&copy; Momentous-app 2016</p>
     </footer>
 </div> <!-- /container -->
-<script src="js/angular.min.js"></script>
-<script src="js/angular-route.min.js"></script>
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="js/angular.js"></script>
+<script src="js/angular-route.js"></script>
 <script src="js/app.js"></script>
 <script src="js/menu/menu.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
